# course_project_bd

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py
src/: dbmanager.py  hh_api.py  utils.py
